# contracts/openapi/bff-public.yaml
@@ -72,6 +72,40 @@ paths:
             application/json:
               schema:
                 $ref: ../error.schema.json
+  /autocomplete/select:
+    post:
+      summary: Autocomplete select event
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: ../autocomplete-select-request.schema.json
+      responses:
+        "200":
+          description: Ack response
+          content:
+            application/json:
+              schema:
+                $ref: ../ack-response.schema.json
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: ../error.schema.json
+        "429":
+          description: Rate limited
+          content:
+            application/json:
+              schema:
+                $ref: ../error.schema.json
+        "500":
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: ../error.schema.json
   /books/{docId}:
     get:
       summary: Book detail by doc id
